<resources>
    <string name="app_name">Централ парк</string>
    <string name="label_countrooms">КОЛИЧЕСТВО КОМНАТ</string>
    <string name="title_parameters">ПАРАМЕТРЫ</string>
    <string name="title_corpus">КОРПУС</string>
    <string name="title_floor">ЭТАЖ</string>
    <string name="title_cost">ЦЕНА</string>
    <string name="title_square">ПЛОЩАДЬ (М<sup>2</sup> )</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="settings_title_attention">Смена адреса сервера и пароль влияют на работоспособность всей системы \n
        Перед внесением изменений рекомендуем связаться с \n
        системным администратором
    </string>

    <!-- Title of Table -->
    <string name="column_1">КОРПУС</string>
    <string name="column_2">№ КВАРТИРЫ</string>
    <string name="column_3">ЭТАЖ</string>
    <string name="column_4">КОЛИЧЕСТВО КОМНАТ</string>
    <string name="column_5">ПЛОЩАДЬ (М<sup>2</sup> )</string>
    <string name="column_6">ЦЕНА</string>
    <string name="column_7">СТАТУС</string>


    <!-- Type of flat -->
    <string name="one_bedroom">ОДНОКОМНАТНАЯ КВАРТИРА</string>
    <string name="two_bedroom">ДВУХКОМНАТНАЯ КВАРТИРА</string>
    <string name="three_bedroom">ТРЕХКОМНАТНАЯ КВАРТИРА</string>
    <string name="four_bedroom">ЧЕТЫРЕХКОМНАТНАЯ КВАРТИРА</string>
    <string name="korpus">КОРПУС</string>
    <string name="num_flat">№ КВАРТИРЫ</string>
    <string name="floor">ЭТАЖ</string>
    <string name="count_room">КОЛИЧЕСТВО КОМНАТ</string>
    <string name="square">ПЛОЩАДЬ, М<sup>2</sup> </string>
    <string name="cost">ЦЕНА</string>
    <string name="status">СТАТУС КВАРТИРЫ</string>


</resources>
