<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:measureAllChildren="false">

    <ImageView
        android:id="@+id/imageBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/draw_level"/>

    <LinearLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_of_table_row_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/column_1"
            android:layout_width="@dimen/row_of_table_column1_width"
            style="@style/myStyleForRowOfTable"
            android:text="@string/column_1" />

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/column_2"
            android:layout_width="@dimen/row_of_table_column2_width"
            style="@style/myStyleForRowOfTable"
            android:text="@string/column_2" />

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/column_3"
            android:layout_width="@dimen/row_of_table_column3_width"
            style="@style/myStyleForRowOfTable"
            android:text="@string/column_3" />

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/column_4"
            android:layout_width="@dimen/row_of_table_column4_width"
            style="@style/myStyleForRowOfTable"
            android:text="@string/column_4" />

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/column_5"
            android:layout_width="@dimen/row_of_table_column5_width"
            style="@style/myStyleForRowOfTable"
            android:text="@string/column_5" />

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/column_6"
            android:layout_width="@dimen/row_of_table_column6_width"
            style="@style/myStyleForRowOfTable"
            android:text="@string/column_6" />

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/column_7"
            android:layout_width="@dimen/row_of_table_column7_width"
            style="@style/myStyleForRowOfTable"
            android:text="@string/column_7" />

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />
    </LinearLayout>

</FrameLayout>